[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "pyaastream"
authors = [{name = "Raeed Ahmed", email = "ruahmed7868@gmail.com"}]
license = {file = "LICENSE"}
classifiers = ["License :: OSI Approved :: MIT License"]
dynamic = ["version", "description"]

dependencies = [
    "beautifulsoup4",
    "lxml",
    "sty"
]

[project.urls]
Home = "https://github.com/RaeedAhmed/pyaastream"

[project.scripts]
nyaa = "pyaastream.main:main"
torr = "pyaastream.main:direct"
